# python-lsm-db

./: .gitignore  MANIFEST.in  README.md  lsm.c  lsm.pxi  lsm.pyx  pyproject.toml  setup.py  tests.py
.github/workflows/: wheels.yaml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
src/: lsm.h  sqlite4.c  sqlite4.h
